--- a/index.html
+++ b/index.html
@@ -40,5 +40,6 @@
       <p>Developed by <span><a href="https://github.com/CodeFuzeOfficial" target="_blank">CodeFuze - Official</a></span></p>
     </footer>
   </div>
+  <script src="script.js"></script>
 </body>
 </html>
